Fix padding on iphones

--- a/public/less/partials/posts.less
+++ b/public/less/partials/posts.less
@@ -7,7 +7,7 @@
 }
 
 .posts {
-	padding: 100px;
+	padding: 100px 0;
 	margin: 0 auto;
 	max-width: 420px;
 }
